--- a/www/styles/themes/monokai/stylus/explorer/icons.styl
+++ b/www/styles/themes/monokai/stylus/explorer/icons.styl
@@ -855,6 +855,9 @@
 
 
 
+
+
+
 /* Wizard - Stack Icons ================================= */
 .wiz-row__icon
 	background-size: 24px !important
@@ -1047,6 +1050,23 @@
 
 
 
+/* Notification - Icons ======================= */
+.notification-item .icon
+	background-size: 24px
+
+.notification-item.ca .icon
+	background: url("img/notifications/ca-logo-mini.png") no-repeat center
+
+.notification-item.finish .icon
+	background: url("img/notifications/yes.png") no-repeat center
+
+.notification-item.fail .icon
+	background: url("img/notifications/no.png") no-repeat center
+
+.notification-item.in-progress .icon
+	background: url("img/notifications/loader56@28.png") no-repeat center
+	background-size: 24px
+	a-rotate(1s)
 
 
 
