--- a/www/styles/themes/monokai/stylus/fileExplorer.styl
+++ b/www/styles/themes/monokai/stylus/fileExplorer.styl
@@ -191,7 +191,9 @@ Share - Header ======================= */
 		display: inline
 		line-height: 56px
 
-	
+	.project-name
+		height: auto !important
+		line-height: normal !important
 
 
 
